[package]
name = "matrices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "0.20", features = ["std", "debug-glam-assert", "glam-assert"]}

[dev-dependencies]

inline-python = "0.8"
pretty_assertions = "1"